@@ -221,7 +221,7 @@
                        @"(c_sn isCaseInsensitiveLike: '%@%%') OR "
                      @"(c_givenname isCaseInsensitiveLike: '%@%%') OR "
 		     @"(c_cn isCaseInsensitiveLike: '%@%%') OR "
-                     @"(c_mail isCaseInsensitiveLike: '%%%@%%') OR "
+                     @"(c_mail isCaseInsensitiveLike: '%@%%') OR "
                      @"(c_telephonenumber isCaseInsensitiveLike: '%%%@%%')",
                      filter, filter, filter, filter, filter];
       qualifier = [EOQualifier qualifierWithQualifierFormat: qs];
